stop "delete all notifications" button from overlapping others (bug 520550)

--- a/htdocs/theme/raw/static/style/style.css
+++ b/htdocs/theme/raw/static/style/style.css
@@ -1532,6 +1532,7 @@ form#search input.text {
 	position: relative;
 	top: -30px;
 	left: -15px;
+        width: 50%;
 }
 
 /* Settings > Institution membership */
